- fix stream toList() usage causing crash in samsung devices